<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LevelUP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="drawer_all">All</string>
    <string name="add_action_name">Task</string>
    <string name="add_action_repeatable">Repeat</string>
    <string name="add_action_start_skill">Start Skill</string>
    <string name="add_action_active">Active</string>
    <string name="add_action_level_learning">0 how much skill increase by each level</string>
    <string name="add_action_hardness">Hardness</string>
    
</resources>
