<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp" />

    <EditText
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/add_action_name" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/check_box_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_name"
        android:layout_marginTop="12dp"
        android:text="@string/add_action_repeatable" />

    <EditText
        android:id="@+id/text_view_start_skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/check_box_active"
        android:layout_below="@+id/check_box_repeat"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/add_action_start_skill"
        android:inputType="number"
        android:text="0" />

    <CheckBox
        android:id="@+id/check_box_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_start_skill"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/check_box_repeat"
        android:text="@string/add_action_active" />

    <EditText
        android:id="@+id/text_view_level_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_view_start_skill"
        android:layout_alignBottom="@+id/text_view_start_skill"
        android:layout_toRightOf="@+id/text_view_start_skill"
        android:ems="10"
        android:hint="@string/add_action_level_learning"
        android:inputType="number" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:numStars="6" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/add_action_hardness" />

</RelativeLayout>
